@@ -2,18 +2,6 @@
     <schemalist>    
 
       <schema>
-        <key>/schemas/apps/totem/audio_driver</key>
-	<applyto>/apps/totem/audio_driver</applyto>
-	<owner>totem</owner>
-	<type>string</type>
-	<default>auto</default>
-	<locale name="C">
-	  <short>Default audio output driver</short>
-	  <long>Default audio output driver</long>
-	</locale>
-      </schema>
-
-      <schema>
         <key>/schemas/apps/totem/show_vfx</key>
 	<applyto>/apps/totem/show_vfx</applyto>
 	<owner>totem</owner>
